@@ -5,10 +5,11 @@
   <meta name="generator" content=
   "HTML Tidy for Linux (vers 25 March 2009), see www.w3.org">
   <meta name="generator" content="Bluefish 2.2.7">
+  <meta name="generator" content="Bluefish 2.2.7">
   <meta content="text/html; charset=us-ascii" http-equiv=
   "Content-Type">
   <meta http-equiv="Last-Modified" content=
-  "Fri, 11 Nov 2016 18:40:28 UTC">
+  "Wed, 16 Nov 2016 05:32:17 UTC">
 
   <title>Ublu Midrange and Mainframe Life Cycle Extension
   Language</title>
@@ -60,7 +61,7 @@
 
   <p>Author: Jack J. Woehr<br>
   Original date: 2013-07-11<br>
-  Last edit: 2016-11-11</p>
+  Last edit: 2016-11-15</p>
   <pre>
  Copyright (c) 2015, Absolute Performance, Inc.
   http://www.absolute-performance.com
@@ -10500,11 +10501,12 @@ Type help for help. Type license for license. Type bye to exit.
   <blockquote>
     <p><tt>/0 [--,-rs ~@rs] [-to datasink] [-from datasink] [[abs
     ~@{row}] | [rel ~@{rows}] | [-autocommit 0|1] | [-bytes
-    ~@{fieldindex}] | [-close{|db|st} tuplename] | [-commit
-    ~@resultSet] | [-fetchsize numrows] | [-get ~@{index}] | [-lget
-    ~@{label}] |-insert | [-json ~@db ~@{tablename}] | [-next] |
-    [-split split_specification] | [-toascii numindices index index
-    ..] | [-metadata]] : operate on result sets</tt></p>
+    ~@{index}] | [-close{|db|st} tuplename] | [-commit ~@resultSet]
+    | [-fetchsize numrows] | [-fileblob ~@{index} ~@{blobfilepath}]
+    | [-get ~@{index}] | [-lget ~@{label}] |-insert | [-json ~@db
+    ~@{tablename}] | [-next] | [-split split_specification] |
+    [-toascii numindices index index ..] | [-metadata]] : operate
+    on result sets</tt></p>
 
     <p>The <tt>rs</tt> command operates on result sets.</p>
 
@@ -10623,6 +10625,11 @@ Type help for help. Type license for license. Type bye to exit.
           </li>
         </ul>
       </li>
+
+      <li><code>-fileblob ~@{index} ~@{blobfilepath}</code> writes
+      the Blob from the <em>index</em> column of the current row to
+      the file whose fully qualified path is
+      <em>blobfilepath</em>.</li>
 
       <li>
         <tt>-insert</tt>
